--- a/src/static/global.css
+++ b/src/static/global.css
@@ -9,10 +9,9 @@ body,
   margin: 0px;
   background: var(--primary-bg-color);
   color: var(--primary-txt-color);
-  font-family: 'Times New Roman';
+  font-family: '-apple-system, BlinkMacSystemFont, HelveticaNeue, Helvetica, Roboto, Arial, sans-serif';
   font-size: 1.5rem;
   line-height: 1.6;
   text-align: center;
   letter-spacing: 0.5px;
-  font-style: italic;
 }
